--- a/Backend/KV/CharacterCard.kv
+++ b/Backend/KV/CharacterCard.kv
@@ -11,6 +11,7 @@
         radius: [10, ]
         padding: "8dp"
         size_hint_x: 0.45
+        on_release: app.open_character_options()
         FitImage:
             source: root.imagePath
             radius: [10, ]
