--- a/Backend/KV/ScheduleCharacterCard.kv
+++ b/Backend/KV/ScheduleCharacterCard.kv
@@ -11,6 +11,7 @@
         radius: [10, ]
         padding: "8dp"
         size_hint_x: 0.3
+        on_release: app.open_character_options()
         FitImage:
             source: root.imagePath
             radius: [10, ]
@@ -29,7 +30,7 @@
                 role: "small"
                 bold: True
                 theme_text_color: "Custom"
-                text_color: self.theme_cls.surfaceBrightColor
+                text_color: self.theme_cls.primaryContainerColor
                 adaptive_height: True
             
             BarWide:
