--- a/Backend/KV/ScheduleCharacterCard.kv
+++ b/Backend/KV/ScheduleCharacterCard.kv
@@ -11,7 +11,7 @@
         radius: [10, ]
         padding: "8dp"
         size_hint_x: 0.3
-        on_release: app.open_character_options()
+        on_release: app.on_click_character()
         FitImage:
             source: root.imagePath
             radius: [10, ]
