--- a/Backend/KV/QuestCard.kv
+++ b/Backend/KV/QuestCard.kv
@@ -12,7 +12,7 @@
         MDIconButton:
             icon: "pencil-outline"
             pos_hint: {"bottom": 1, "right": 1}
-            on_release: app.on_quest_edit(root)
+            on_release: app.edit_quest(root)
         MDBoxLayout:
             orientation: "horizontal"
             padding: "5dp"
