--- a/Backend/KV/QuestLockCard.kv
+++ b/Backend/KV/QuestLockCard.kv
@@ -4,10 +4,15 @@
     padding: "4dp"
     MDRelativeLayout:
         MDCheckbox:
-            pos_hint: {"top": 0.96, "right": 0.97}
+            size_hint: None, None
+            size: dp(48), dp(48)
+            color_active: app.theme_cls.tertiaryColor
+            pos_hint: {"center_x": 0.08, "center_y": 0.86}
         MDBoxLayout:
             orientation: "horizontal"
             padding: "5dp"
+            MDBoxLayout:
+                size_hint_x: 0.15
             MDBoxLayout:
                 pos_hint: {'top': 1}
                 orientation: "vertical"
@@ -21,12 +26,10 @@
                     markup: True
                     adaptive_height: True
                     theme_text_color: "Custom"
-                    text_color: app.theme_cls.primaryColor
+                    text_color: app.theme_cls.tertiaryColor
                 MDLabel:
                     text: f"[b]Mô Tả:[/b] {root.description}"
                     font_style: "Body"
                     role: "medium"
                     markup: True
                     adaptive_height: True
-            MDBoxLayout:
-                size_hint_x: 0.15
