--- a/Backend/KV/ScheduleCharacterCard.kv
+++ b/Backend/KV/ScheduleCharacterCard.kv
@@ -13,7 +13,8 @@
         size_hint_x: 0.3
         on_release: app.on_click_character()
         FitImage:
-            source: root.imagePath
+            id: character_image
+            source: f""
             radius: [10, ]
     # --- Character Stats ---
     MDScrollView:
